src/test/ui/privacy/effective_visibilities.stderr
error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities.rs:4:1
   |
LL | mod outer {
   | ^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:6:5
   |
LL |     pub mod inner1 {
   |     ^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:9:9
   |
LL |         extern "C" {}
   |         ^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:12:9
   |
LL |         pub trait PubTrait {
   |         ^^^^^^^^^^^^^^^^^^

error: not in the table
  --> $DIR/effective_visibilities.rs:20:9
   |
LL |         struct PrivStruct;
   |         ^^^^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:23:9
   |
LL |         pub union PubUnion {
   |         ^^^^^^^^^^^^^^^^^^

error: not in the table
  --> $DIR/effective_visibilities.rs:25:13
   |
LL |             a: u8,
   |             ^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:27:13
   |
LL |             pub b: u8,
   |             ^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:31:9
   |
LL |         pub enum Enum {
   |         ^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:33:13
   |
LL |             A(
   |             ^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:35:17
   |
LL |                 PubUnion,
   |                 ^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities.rs:41:5
   |
LL |     macro_rules! none_macro {
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub, Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:47:5
   |
LL |     macro_rules! public_macro {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:52:5
   |
LL |     pub struct ReachableStruct {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:54:9
   |
LL |         pub a: u8,
   |         ^^^^^^^^^

error: Direct: pub, Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:59:9
   |
LL | pub use outer::inner1;
   |         ^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:65:5
   |
LL |     pub type HalfPublicImport = u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub(crate), Reachable: pub(crate), ReachableThroughImplTrait: pub(crate)
  --> $DIR/effective_visibilities.rs:68:5
   |
LL |     pub(crate) const HalfPublicImport: u8 = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub, Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:72:9
   |
LL | pub use half_public_import::HalfPublicImport;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub, Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:72:9
   |
LL | pub use half_public_import::HalfPublicImport;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:14:13
   |
LL |             const A: i32;
   |             ^^^^^^^^^^^^

error: Direct: pub(crate), Reexported: pub, Reachable: pub, ReachableThroughImplTrait: pub
  --> $DIR/effective_visibilities.rs:16:13
   |
LL |             type B;
   |             ^^^^^^

error: aborting due to 22 previous errors

